dev/sd/backup/bemily-proxy-deploy2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bemily-proxy
  labels:
    Service: bemily-proxy
    Role: message
spec:
  replicas: 2
  selector:
    matchLabels:
      Service: bemily-proxy
      Role: message
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        Service: bemily-proxy
        Role: message
    spec:
      containers:
      - name: bemily-proxy
        image: 193033533370.dkr.ecr.ap-northeast-2.amazonaws.com/bemily/bemily-proxy:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
