dev/sd/backup/ingress-ctl.yaml
apiVersion: v1
kind: Service
metadata:
  name: alb-ingress-controller
  namespace: kube-system
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "tcp"
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
    app.kubernetes.io/name: alb-ingress-controller
  labels:
    name: alb-ingress-controller
    node_tag: ingress-alb
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: rest-api
  selector:
    app.kubernetes.io/name: alb-ingress-controller
